// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genereates correct styles for custom fontSize 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "orbit-icons",
      },
      Object {
        "fontSize": 24,
        "height": 24,
        "lineHeight": 24,
        "width": 24,
      },
      Object {
        "color": "#7f91a8",
      },
      Array [
        undefined,
        Object {
          "fontSize": 12,
          "height": 12,
          "lineHeight": 12,
          "width": 12,
        },
      ],
    ]
  }
>
  
</Text>
`;

exports[`renders 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "orbit-icons",
      },
      Object {
        "fontSize": 24,
        "height": 24,
        "lineHeight": 24,
        "width": 24,
      },
      Object {
        "color": "#7f91a8",
      },
      Array [
        undefined,
        null,
      ],
    ]
  }
>
  
</Text>
`;

exports[`renders for small and large 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "orbit-icons",
      },
      Object {
        "fontSize": 16,
        "height": 16,
        "lineHeight": 16,
        "width": 16,
      },
      Object {
        "color": "#7f91a8",
      },
      Array [
        undefined,
        null,
      ],
    ]
  }
>
  
</Text>
`;

exports[`renders for small and large 2`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "orbit-icons",
      },
      Object {
        "fontSize": 32,
        "height": 32,
        "lineHeight": 32,
        "width": 32,
      },
      Object {
        "color": "#7f91a8",
      },
      Array [
        undefined,
        null,
      ],
    ]
  }
>
  
</Text>
`;
